--- a/introduction.tex
+++ b/introduction.tex
@@ -2,7 +2,7 @@
 
 To realize the vision of the Semantic Web, the conformance of existing data to the RDF model is a necessary condition. Yet, it is a fact that most of the data available on the Web do not satisfy this requirement. A number of tools have been developed to facilitate the transition to RDF. Much of them are founded on well-defined mapping languages (R2RML~\cite{R2RML_W3C:12}, RML~\cite{dimou2014rml}, SPARQL-Generate~\cite{lefranccois2016flexible}, etc.). Using mapping languages directly is complex. This is because they have a steep learning curve and require knowing the syntax and semantics of the languages in addition to the Semantic Web stack and ontologies that can be used. 
 
-Besides mapping languages, there are automatic and semi-automatic RDFizers\coment{Pauline}{RDFizer is not the name of our approach?}. We ignore automatic RDFizers (e.g. Direct Mapping~\cite{Direct_Mapping_W3C:12}, Docker2RDF~\cite{ayed2017docker2rdf}, etc.) as their transformation cannot be customized or they are restricted for specific domain models. The minor category of works (RMLEditor~\cite{heyvaert2016rmleditor}, OpenRefine~\cite{verborgh2013using}, etc.) around semi-automatic RDFizers is our main interest. We focus on this category due to their ability in aiding human experts by automating complex tasks without hindering flexibility by incorporating them for decision making and validation. The main problem with the latter tools is that they mostly only provide a graphical interface with some facilities for searching through ontologies. However, they still rely end-users with respect to knowledge about ontologies and data modeling using them.
+Besides mapping languages, there are automatic and semi-automatic RDFizers. We ignore automatic RDFizers (e.g. Direct Mapping~\cite{Direct_Mapping_W3C:12}, Docker2RDF~\cite{ayed2017docker2rdf}, etc.) as their transformation cannot be customized or they are restricted for specific domain models. The minor category of works (RMLEditor~\cite{heyvaert2016rmleditor}, OpenRefine~\cite{verborgh2013using}, etc.) around semi-automatic RDFizers is our main interest. We focus on this category due to their ability in aiding human experts by automating complex tasks without hindering flexibility by incorporating them for decision making and validation. The main problem with the latter tools is that they mostly only provide a graphical interface with some facilities for searching through ontologies. However, they still rely on end-users with respect to their knowledge about ontologies and data modeling using them.
 
 In this work, our aim is to provide an approach to further facilitate semi-automatic RDFizers by automatically generating initial mappings without prior knowledge about ontologies, that may then be customized by end-users. The originality of our contribution is that it automatically generates several holistic mappings and try best to provide an exhaustive description for a given type of instances. Our approach is not an alternative but complementary to existing tools. In the rest of this paper, we describe our approach and its implementation in \secref{approach} and \secref{implementation} respectively. Finally, we demonstrate our implementation using real datasets from open data portal. %Finally, we describe \secref{futureWork} that are we are currently working on.   
 
@@ -29,7 +29,7 @@ Moreover, our approach uses an \kword{Ontology repository}, as despicted in~\fig
 \begin{figure}
 	\centering
 	\includegraphics[scale=0.55]{images/GeneralApproachPaper1.pdf}
-	\caption{Mappings Generation Process \coment{Pauline}{Add symbol of cartesian product?}}
+	\caption{Mappings Generation Process}
 	\label{fig:overviewApproach}
 \end{figure}
 
@@ -39,21 +39,10 @@ Below, we proceed with the descriptions of the steps in our approach.
 In our approach, we suppose that the file to be transformed contains only one type of object. We make the difference between the type of object (\kword{Type element}) and it's properties (\kword{Schema element}). To capture the background knowledge about the schema used in the raw data, firstly, we generate a \kword{Schema description} consisting of a \kword{Type description} and \kword{Elements description}.
 \kword{Type Description} characterizes the type of objects described by the schema and \kword{Elements descriptions} characterizes the schema elements (e.g. \kword{lon} in \figref{sampleRawData}). For both, \kword{Type Description} and \kword{Elements Description}, the description can be enriched by \kword{keywords} added by the end-user.
 
-
-Secondly, using an \kword{Ontology repository}, and the \kword{Type description} and the \kword{Elements description}, a set of candidate classes are generated for typing objects and a set of candidate data properties or classes are generated for modeling the schema element.
-The \kword{Schema description} is converted into a pseudo-ontology in OWL and simple ontology matching approaches presented in \cite{??} are used to generate the candidate classes.
-
-
-
-\tabref{overviewElementMappings} shows a schema description for the schema of \figref{sampleRawData} and generated ontology entities for its elements. For example, the objects' type in \figref{sampleRawData} can be described by the keyword `parking facility'. Using the latter description, the classes \kword{mv:ParkingFacility} and \kword{sc:Park} are generated to type the objects. Similarly, the schema element \kword{TOTAL} is described using the keywords `capacity' and `total' using which the class \kword{mv:Capacity} and data property \kword{sc:totalTime} are candidate classes generated to model it. The candidate proposal \kword{sc:totalTime} is not appropriate to model \kword{TOTAL} as its semantics is not compatible with the latter. To determine the appropriateness of an entity, we also generated a confidence. For simplicity sake, we omit this information from \tabref{overviewElementMappings}.
-
 \paragraph{Generate candidates}
 Using an \kword{Ontology repository}, and the \kword{Schema description}, a set of candidate classes are generated for typing objects, thanks to \kword{Type description} and a set of candidate data properties or classes are generated for modeling the schema element, thanks to \kword{Elements description}.
 The \kword{Schema description} is then converted into a pseudo-ontology in OWL and simple ontology matching approaches presented in [citation] are used to generate the candidate for the \kword{Type element} and \kword{Schema elements}.
 \tabref{overviewElementMappings} shows a schema description for the schema of \figref{sampleRawData} and generated ontology entities for its elements. For example, the objects' type in \figref{sampleRawData} can be described by the keyword `parking facility'. Using the latter description, the classes \kword{mv:ParkingFacility} and \kword{sc:Park} are generated to type the objects. Similarly, the schema element \kword{TOTAL} is described using the keywords `capacity' and `total' using which the class \kword{mv:Capacity} and data property \kword{sc:totalTime} are candidates generated to model it. The candidate proposal \kword{sc:totalTime} is not appropriate to model \kword{TOTAL} as its semantics is not compatible with the latter. To determine the appropriateness of an entity, we also generated a confidence. For simplicity sake, we omit this information from \tabref{overviewElementMappings}.
-\coment{Pauline}{What is the confidence, The similarity? Why talk about it if not displayed?}
-
-
 
 \begin{comment}
 For example, suppose the \kword{Type Description} include the keyword `parking facility' to describe the objects' type in \figref{sampleRawData}. This description is used to generate candidate classes that include \kword{mv:ParkingFacility} and \kword{sc:Park}.
@@ -87,8 +76,6 @@ Similarly, the candidate data property generated for \kword{lon} is \kword{wgs84
 \end{table}
 %\vspace{-1cm}
 
-Thirdly, possible combinations are generated by performing a cartesian product on candidate entities. A combination consists of a candidate class for typing, that we refer as the \emph{type class}, and a candidate data property or class for each schema element if it was generated in the previous step. \tabref{overviewCombinationsElements} shows all combinations generated from the candidate entities in \tabref{overviewElementMappings}. As we can see, in each combination, there is one candidate entity for the type class and schema elements.
-
 %\vspace{-0.5cm}
 \begin{table}[]
 	\centering
@@ -105,10 +92,6 @@ Thirdly, possible combinations are generated by performing a cartesian product o
 	\label{tab:overviewCombinationsElements}
 \end{table}
 %\vspace{-1cm}
-
-Finally, we enrich each combination with the path consisting of ontology entities required to describe the \kword{Type class} with the identified classes or data properties mapped to \kword{Element description}s. These paths are identified using patterns that we have defined. They exploit the graph structure of ontologies. 
-
-For example, \figref{combinationNoPath} shows the first combination from \tabref{overviewCombinationsElements} and the required paths, illustrated as dotted lines, that will be generated at this step. It is possible that more than one paths or no paths exist between some entities. A combination and the required paths makes up one initial mapping. To choose an initial mapping and further customize it by choosing and validating the paths, a user interface is provided.
 
 \paragraph{Generate candidate mappings}
 Candidate mappins are build in two steps.
@@ -151,7 +134,7 @@ we provide a graphical \kword{User Interface}. Using the interface, users can up
 	\label{fig:OverviewImplementation}
 \end{figure}
 
-The user interface is a web application implemented using the JavaScript library \emph{React}\footnote{\url{https://reactjs.org/}}. The video shows the use of the interface to generate mappings for the CSV parking dataset in \secref{approach}. As it can be seen, the user interface (\figref{screenshotInterface}) has three main parts. The top left part is focused on the raw data that is imported using the \kword{import CSV} menu item. On clicking on a column, keywords can be entered. The bottom left part shows the initial mappings and on selecting one of them, its corresponding description graph is rendered on the right part. The human expert can interact with different part of the latter graph and select and validate the paths. 
+The user interface is a web application implemented using the JavaScript library \emph{React}\footnote{\url{https://reactjs.org/}}. The video shows the use of the interface to generate mappings for the CSV parking dataset in \secref{approach}. As it can be seen, the user interface has three main parts. The top left part is focused on the raw data that is imported using the \kword{import CSV} menu item. On clicking on a column, keywords can be entered. The bottom left part shows the initial mappings and on selecting one of them, its corresponding description graph is rendered on the right part. The human expert can interact with different part of the latter graph and select and validate the paths. 
 
 %For each possible mapping in the bottom right part, different pieces of information are provided namely: score, type class, number of classes/data properties and finally number of (un)mapped columns. Two main refinements are possible for each possible mapping. Firstly, data properties can be specified in class mappings. Secondly, ontology entities can be changed and paths can be re-generated for any schema element. This gives the user full flexibility to change and adapt a particular possible mapping.     
 
@@ -165,18 +148,7 @@ The user interface is a web application implemented using the JavaScript library
 	\end{figure}
 \end{comment}
 
-\section{Demonstration}\label{sec:demonstration}
-Our demonstration consist of using datasets from open data portals for some cities in France. \figref{expMappingParking} shows some of our experiments using these datasets. For each city, we performed two experiment. In \kword{NK}, no keywords are added by the user while in \kword{WK}, keywords are added. As we can see, even without keywords, there are fields that can be correctly mapped. Obviously, with keywords, initial mappings with better quality are generated. For all these datasets, we have their respective schema descriptions that we intend to use in our demonstration. 
 
-
-
-\begin{figure}
-	\centering
-	\includegraphics[scale=0.3]{./images/mappingPerParking1.png}
-	\caption{Mappings of the columns grouped per parking dataset. Where \emph{NK} represents the 
-		experiment without keywords and \emph{WK} represents the experiments with keywords.}
-	\label{fig:expMappingParking}
-\end{figure}
 
 
 
